--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 /*
-Theme Name:    ChildThemeName
-Description: 		Child theme for SeaMonster Studios theme
-Version: 			2.0.0
+Theme Name:   SeaMonster Studios
+Description: 		Monolithic Starter Theme by SeaMonster Studios
+Version: 			3.0.0
 Author: 			SeaMonster Studios
-Author URI: 		https://www.seamonsterstudios.com
-Template: 			seamonster-theme
-Text Domain: 		seamonster-theme
-*/	
+Author URI: 	https://www.seamonsterstudios.com
+*/
